# publicUtilities

./: .gitignore  Brewfile  README.md  compressProjectFiles.py  consolidateREADME.sh  dockerCommands.md  dockerRunCommands.md  requirements_overall.txt  z_allFiles.ignore  z_util_compressProjectFiles.py
DockerCommands/: dockerCommands.md
authService/: CONFIG_REFERENCE.md  MIGRATION.md  QUICKSTART.md  README.md  __init__.py  appconfig.py  core.py  example_users.yaml  hashing.py  logger.py  migration_plan.md  pyproject.toml  requirements.txt  setup.py
authService/config/: app_config.test.yaml  app_config.yaml
authService/framework_examples/: __init__.py  django_example.py  express_example.js  flask_example.py  spring_boot_example.java
authService/scripts/: migrate_passwords.py
authService/tests/: __init__.py  test_appconfig.py  test_audit_log.py  test_auth.py  test_hashing.py
dbUtils/: clearQdrantDB.py  listQdrantCollections.py  reference.md
fast_webDrop/: .gitignore  AUTH_USAGE.md  CLAUDE.md  README.md  UI_UX_IMPROVEMENT_PLAN.md  fast_api_main.py  manage_users.py  requirements.txt  styling_plan.css  suggestions.md
fileServe/: .gitignore  README.md  UI_UX_IMPROVEMENT_PLAN.md  app.py  config.yaml  core_auth.py  deploy.sh  plan.md  requirements.txt  roadmap.md  routes.py  start_gunicorn.sh  suggestions.md  test_app.py  users.yaml  wsgi.py  z_allFiles.txt  z_util_compressProjectFiles.py
fileUtils/: .gitignore  AGENTS.md  config.py  costOfRefactor.py  howManyTokens.py  imgCompress_v1.py  imgcompress.bat  organizeFiles.py  organizefiles.bat  promptcaching.md
(+196 files in other folders)
